<resources>
    <string name="app_name">KeyBank.Callback</string>

    <string-array name="ListOfQuestions">
        <item>I forgot my password or user ID</item>
        <item>Fraud on my account</item>
        <item>Checking\\savings account help</item>
        <item>Question about my credit card</item>
        <item>Question about my investments</item>
    </string-array>

    <string-array name="ListOfDepartments">
        <item>Password Help</item>
        <item>Fraudulent Team</item>
        <item>Customer Service</item>
        <item>Customer Service</item>
        <item>Investment Services</item>
    </string-array>

    <string-array name="ListOfWeekdayStartHours">
        <item>8</item>
        <item>8</item>
        <item>8</item>
        <item>8</item>
    </string-array>

    <string-array name="ListOfWeekdayEndHours">
        <item>17</item>
        <item>17</item>
        <item>17</item>
        <item>17</item>
    </string-array>

    <string-array name="ListOfSaturdayStartHours">
        <item>8</item>
        <item>8</item>
        <item>0</item>
        <item>0</item>
    </string-array>

    <string-array name="ListOfSaturdayEndHours">
        <item>13</item>
        <item>13</item>
        <item>0</item>
        <item>0</item>
    </string-array>

    <string name="title_activity_callback_schedule">CallbackScheduleActivity</string>
    <string name="request_callback">Call me back as soon as someone is available</string>
    <string name="estimated_wait_time_extended">We are experiencing heavier than normal volume right now. The estimated wait time is</string>
    <string name="estimated_wait_time">Your estimated wait time is</string>
    <string name="_100_minutes">100 Minutes</string>
    <string name="department">Department</string>
    <string name="call_immediately">Connect me now</string>
    <string name="call_immediately_and_wait_on_hold">Connect me now - I’ll wait on hold</string>
    <string name="_100">100</string>
    <string name="callback_has_been_scheduled">We will call you back at this number as soon as someone is available.</string>
    <string name="callback_has_been_scheduled_with_time">We will call you back at this number at the scheduled time.</string>
    <string name="main_page">OK</string>
    <string name="There_is_currently_no_wait">We have someone ready immediately to answer your question</string>
    <string name="we_are_closed">We are sorry, our offices are now closed. We want to help you as soon as possible. Please select an option.</string>
    <string name="minutes">Minutes</string>
    <string name="at_1_00_pm">Today at 1:00:PM</string>
    <string name="at_8_30_am">Today at 9:00 AM</string>
    <string name="at_4_30_pm">Today at 4:30 PM</string>
    <string name="today">Today </string>
    <string name="tomorrow">Tomorrow </string>
    <string name="saturday">Saturday </string>
    <string name="monday">Monday</string>
    <string name="custom">Or Another Time</string>
    <string name="schedule_callback">Call me back later when I\'m available</string>
    <string name="callback_scheduler">Callback Scheduler</string>
    <string name="done">Done</string>
    <string name="question_to_user">Question to user</string>
    <string name="assigned_department">Assigned Department</string>
    <string name="estimated_callback_time">Estimated Callback Time:</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="main_menu">Main Menu</string>
    <string name="cancel_callback">Cancel this callback</string>
    <string name="wish_to_cancel_callback">Are you sure you want to cancel your call-back? You will lose your place in the queue.</string>
    <string name="real_yes">Yes</string>
    <string name="real_no">No</string>
    <string name="server_connection">http://ceclnx01.cec.miamioh.edu:2025/</string>
    <string name="server_add_queue_add_id">ADD_QUEUE</string>
    <string name="server_queue_time">QUEUE_TIME</string>
    <string name="server_next_queue_time">NEXT_QUEUE_TIME</string>
    <string name="server_schedule_callback_id_day_hour_minute">CALLBACK</string>
    <string name="server_callback_time_server_add_id">CALLBACK_TIME</string>
    <string name="server_callback_remove_add_id">REMOVE</string>
    <string name="server_time">GET_TIME</string>
    <string name="server_show">SHOW</string>
    <string name="server_cannot_find_callback_time">Cannot Find Callback</string>
    <string name="i_need_help">Contact customer support</string>
    <string name="keybank_main">KeyBank Main</string>
    <string name="callback_not_supported_title">We\'re Sorry</string>
    <string name="callback_not_supported_message">We are having trouble \n connecting you automatically. \n \n Please call \n 1-800-KEY-2-YOU \n directly</string>
    <string name="android_user">AndroidUser1</string>
    <string name="server_id_string">&amp;id=</string>
    <string name="office_open">OFFICE_OPEN</string>
    <string name="offices_closed_message">We are sorry, the offices are now closed. Please choose the following options for assistance:</string>
    <string name="server_next_available_queue_time">NEXT_AVAILABLE_QUEUE_TIME</string>

    <integer name="FirstSuggestedTimeHour">9</integer>
    <integer name="FirstSuggestedTimeMinute">00</integer>
    <integer name="SecondSuggestedTimeHour">13</integer>
    <integer name="SecondSuggestedTimeMinute">00</integer>
    <integer name="ThirdSuggestedTimeHour">16</integer>
    <integer name="ThirdSuggestedTimeMinute">30</integer>
</resources>
